src/test/ui/feature-gates/feature-gate-cfg-target-has-atomic.stderr
error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:13:7
   |
LL | #[cfg(target_has_atomic = "8")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:19:7
   |
LL | #[cfg(target_has_atomic = "8")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:24:7
   |
LL | #[cfg(target_has_atomic = "16")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:29:7
   |
LL | #[cfg(target_has_atomic = "16")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:34:7
   |
LL | #[cfg(target_has_atomic = "32")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:39:7
   |
LL | #[cfg(target_has_atomic = "32")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:44:7
   |
LL | #[cfg(target_has_atomic = "64")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:49:7
   |
LL | #[cfg(target_has_atomic = "64")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:54:7
   |
LL | #[cfg(target_has_atomic = "128")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:59:7
   |
LL | #[cfg(target_has_atomic = "128")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:64:7
   |
LL | #[cfg(target_has_atomic = "ptr")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:69:7
   |
LL | #[cfg(target_has_atomic = "ptr")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:76:10
   |
LL |     cfg!(target_has_atomic = "8");
   |          ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:78:10
   |
LL |     cfg!(target_has_atomic = "16");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:80:10
   |
LL |     cfg!(target_has_atomic = "32");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:82:10
   |
LL |     cfg!(target_has_atomic = "64");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:84:10
   |
LL |     cfg!(target_has_atomic = "128");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error[E0658]: `cfg(target_has_atomic)` is experimental and subject to change (see issue #32976)
  --> $DIR/feature-gate-cfg-target-has-atomic.rs:86:10
   |
LL |     cfg!(target_has_atomic = "ptr");
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_target_has_atomic)] to the crate attributes to enable

error: aborting due to 18 previous errors

For more information about this error, try `rustc --explain E0658`.
